WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288134
[JSC][GreedyRegAlloc] Fix validateAssignments false positive failure
https://bugs.webkit.org/show_bug.cgi?id=288134
Summary
[JSC][GreedyRegAlloc] Fix validateAssignments false positive failure
Dan Hecht
Reported
2025-02-20 12:09:52 PST
..
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-20 12:10:03 PST
<
rdar://problem/145238099
>
Dan Hecht
Comment 2
2025-02-20 12:19:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40996
EWS
Comment 3
2025-02-20 15:01:39 PST
Committed
290747@main
(985c61c7ea2b): <
https://commits.webkit.org/290747@main
> Reviewed commits have been landed. Closing PR #40996 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug